--- a/index.html
+++ b/index.html
@@ -1,4 +1,45 @@
-<div style='position: relative; width: 100%; height: 0; padding-top: 56.25%; overflow: hidden; will-change: transform;'>
-    <iframe loading='lazy' style='position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0; margin: 0;' src='https:&#x2F;&#x2F;www.miricanvas.com&#x2F;v&#x2F;13rgk2l?embed'>
-    </iframe>
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Iframe 예제</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+        .iframe-container {
+            position: relative;
+            width: 100%;
+            max-width: 800px; /* 원하는 최대 너비 설정 */
+            height: 0;
+            padding-top: 56.25%; /* 16:9 비율 */
+            overflow: hidden;
+            will-change: transform;
+        }
+        .iframe-container iframe {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            border: none;
+            padding: 0;
+            margin: 0;
+        }
+    </style>
+</head>
+<body>
+
+<div class="iframe-container">
+    <iframe loading="lazy" src="https://www.miricanvas.com/v/13rgk2l?embed"></iframe>
 </div>
+
+</body>
+</html>
