--- a/index.html
+++ b/index.html
@@ -3,35 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iframe øπ¡¶</title>
+    <title>Iframe Ï†ÑÏ≤¥ ÌôîÎ©¥ ÏòàÏ†ú</title>
     <style>
-        body {
+        html, body {
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f0f0f0;
+            height: 100%;
+            width: 100%;
+            overflow: hidden; /* Ïä§ÌÅ¨Î°§Î∞î Ï†úÍ±∞ */
         }
         .iframe-container {
-            position: relative;
-            width: 100%;
-            max-width: 800px; /* ø¯«œ¥¬ √÷¥Î ≥ ∫Ò º≥¡§ */
-            height: 0;
-            padding-top: 56.25%; /* 16:9 ∫Ò¿≤ */
-            overflow: hidden;
-            will-change: transform;
-        }
-        .iframe-container iframe {
             position: absolute;
-            width: 100%;
-            height: 100%;
             top: 0;
             left: 0;
+            width: 100%;
+            height: 100%;
+        }
+        .iframe-container iframe {
+            width: 100%;
+            height: 100%;
             border: none;
-            padding: 0;
-            margin: 0;
         }
     </style>
 </head>
