--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iframe 전체 화면 예제</title>
+    <title>해신의 신전</title>
     <style>
         html, body {
             margin: 0;
